# dist

./: .gitignore  CMakeLists.txt  LICENSE  package-lock.json  package.json  zeus-box.json
chess/vcpu/: CMakeLists.txt
contracts/eos/cronservice/: cronservice.cpp
contracts/eos/dappservices/: _dns_impl.hpp  auth.hpp  cron.hpp  dns.hpp  history.hpp  ipfs.hpp  log.hpp  oracle.hpp  readfn.hpp  sign.hpp  storage.hpp  vaccounts.hpp  vcpu.hpp
contracts/eos/dappservices-prefix/tmp/: dappservices-cfgcmd.txt
contracts/eos/ipfsservice/: ipfsservice.cpp
contracts/eos/logservice/: logservice.cpp
contracts/eos/oracleservice/: oracleservice.cpp
contracts/eos/vaccountsservice/: vaccountsservice.cpp
dappservices/: auth.hpp  cron.hpp  dappservices.config.hpp  dns.hpp  history.hpp  ipfs.hpp  log.hpp  oracle.hpp  readfn.hpp  sign.hpp  storage.hpp  vaccounts.hpp  vcpu.hpp
logs/: .67c6841ee9c70ede86212bf2a0224c4b462c62f2-audit.json
vcpuconsumer/: CMakeLists.txt
vcpuconsumer/vcpu/: CMakeLists.txt
vgrab/: CMakeLists.txt
