cmake_minimum_required(VERSION 3.5)
set(EOSIO_WASM_OLD_BEHAVIOR "Off")
project(vcpuconsumer VERSION 1.0.0)
find_package(eosio.cdt)
set(VCPUWASM "vcpuconsumer-VCPU.wasm")
include_directories(../)
add_executable(${VCPUWASM} ../vcpuconsumer.cpp)
set_target_properties( ${VCPUWASM} PROPERTIES LINK_FLAGS "-fquery-server" SUFFIX "" )
target_compile_options( ${VCPUWASM} PUBLIC -fquery-server )